[bumpversion]
current_version = 0.4.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>.*)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{build}
	{major}.{minor}.{patch}
commit = True
tag = True

[bumpversion:part:release]
first_value = release
optional_value = release
values = 
	a
	b
	rc
	release

[bumpversion:part:build]

[flake8]
exclude = 
	env
	git_hooks
	.git
	__pycache__
	*.pyc
max-complexity = 10
max-line-length = 110
ignore = 
	W503
	W504
	E203

[tool:pytest]
addopts = -s
filterwarnings = 
	ignore::DeprecationWarning:eth_abi.*:
	ignore::UserWarning:vyper.*:

[bumpversion:file:curvesim/version.py]

[metadata]
name = curvesim
description = Simulate Curve pools
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: curvesim.version.__version__
url = https://github.com/curveresearch/curvesim
author = Curve Research
author_email = help@curveresearch.org
license = MIT
license_file = LICENSE.md
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	Intended Audience :: Developers
	Intended Audience :: Financial and Insurance Industry
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
project_urls = 
	Documentation = https://curvesim.readthedocs.io
	Source = https://github.com/curveresearch/curvesim
	Tracker = https://github.com/curveresearch/curvesim/issues

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
	numpy >= 1.23.4
	pandas >= 1.5.1
	scipy >= 1.9.3
	gmpy2 >= 2.1.2
	matplotlib >= 3.5.3
	web3 >= 6.0.0b4
	requests >= 2.28.1
	tenacity >= 8.1.0
	python-dotenv>=0.21.0
	altair>=5.0.0

[options.packages.find]
exclude = 
	.github
	data
	git_hooks
	results
	test
